# Space

./: .gitignore  Cargo.toml  Data_Access.ipynb  data_access.py  data_access.rs  requirements.txt
src/: data_access.rs  lib.rs  main.rs  registry.rs  regtap.rs  vo_resource.rs  xml.rs
test_table/: data.parquet  metadata.json
tests/resources/: ivoa.json  test_response.xml
