[package]
name = "space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.15", features = ["blocking","json"] }
polars = "0.27.2"
tokio = { version = "1.26.0", features = ["full"] }
quick-xml = { version = "0.28.1", features = ["serde-types", "serialize"]}
mockito = "1.0.1"
serde = "1.0.159"
serde_derive = "1.0.159"
schema_analysis = "0.5.0"
serde_json = "1.0.95"
